# tbos

./: .gitignore  CMakeLists.txt  README.md  build.bat  build_and_run.sh
res/shaders/: 01.shader  02.frag.glsl  03_st.frag.glsl  03_st.glsl  03_test_uniforms.frag.glsl  03_uv.frag.glsl  03_uv.shader  05_0.frag.glsl  05_0.glsl  05_1.frag.glsl  05_1.shader  05_2.frag.glsl  05_2.shader  05_3.frag.glsl  05_3.glsl  05_4.frag.glsl  05_4.glsl  05_5.frag.glsl  05_5.glsl  06_0.frag.glsl  06_1.frag.glsl  06_2.frag.glsl  06_3_sunset.frag.glsl  06_4_hsb.frag.glsl  06_5_polar_hsb.frag.glsl  06_6_focused_polar_hsb.frag.glsl  06_breakstep.frag.glsl  06_cycle.frag.glsl  06_querp.frag.glsl  06_rainbow.frag.glsl  06_rainbow_cycle.frag.glsl  06_round_mask.frag.glsl  06_round_rainbow.frag.glsl  06_round_rainbow_grad.frag.glsl  06_sel_in_range.frag.glsl  07_0.frag.glsl  07_1_piet_mondrian.frag.glsl  07_2.frag.glsl  07_3.frag.glsl  07_4_dist_field.frag.glsl  (+5 more)
src/: gl_helpers.cpp  gl_helpers.hpp  main.cpp  shader.cpp  shader.hpp  shader_linker.cpp  shader_linker.hpp
